added point tracing/tracking functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(3D_SDL)
 
-add_executable(3D_SDL src/sierpinski.c src/3DRlinalg.c src/gfx.c)
+add_executable(3D_SDL src/cube.c src/3DRlinalg.c src/gfx.c)
 
 #these commands allow the lsp to use autofill for external frameworks
 find_package(GSL REQUIRED)
