--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.7)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_BUILD_TYPE Debug)
 #this needs to be set before the project is built and files are linked etc.
 
 project(3D_SDL)
 
-add_executable(3D_SDL src/cube.c src/3DRlinalg.c src/gfx.c)
+add_executable(3D_SDL src/sierpinski.c src/3DRlinalg.c src/gfx.c)
 
 #these commands allow the lsp to use autofill for external frameworks
 find_package(GSL REQUIRED)
